--- a/_sass/addon/module.scss
+++ b/_sass/addon/module.scss
@@ -95,12 +95,12 @@
     font-style: normal;
     font-size: 80%;
     padding: 0;
-    color: #6d6c6c;
+    color: #00fbe6;
   }
 }
 
 %sidebar-links {
-  color: rgba(117, 117, 117, 0.9);
+  color: #e4f3e9;
   user-select: none;
 }
 
