dark palette pink shades

--- a/_sass/colors/dark-syntax.scss
+++ b/_sass/colors/dark-syntax.scss
@@ -79,6 +79,8 @@
   --code-header-icon-color: rgb(244, 182, 182);
   --clipboard-checked-color: #2bcc2b;
   --filepath-text-color: rgb(85, 2, 2);
+  // --text-muted: #ffffff;
+  // --text-muted-color: #ffffff;
 
   .highlight {
     .gp { color: #818c96; }
