hover on navigation cards

--- a/_sass/layout/post.scss
+++ b/_sass/layout/post.scss
@@ -73,9 +73,9 @@ img.preview-img {
     color: var(--link-color);
 
     &:hover {
-      background: #2a408e;
-      color: #fff;
-      border-color: #2a408e;
+      background: #1c1e26;
+      color: #e4f3e9;
+      border-color: #222730;
     }
 
     &.disabled {
