--- a/_sass/addon/module.scss
+++ b/_sass/addon/module.scss
@@ -55,8 +55,8 @@
 }
 
 %link-hover {
-  color: #d2603a !important;
-  border-bottom: 1px solid #d2603a;
+  color: #f4b6b6 !important;
+  border-bottom: 1px solid #f4b6b6;
   text-decoration: none;
 }
 
