--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -542,7 +542,7 @@ img[data-src] {
 
     border-bottom: none;
     text-decoration: none;
-    color: #d2603a;
+    color: #e4f3e9;
   }
 }
 
@@ -668,10 +668,10 @@ $sidebar-display: "sidebar-display";
   #avatar {
     > a {
       display: block;
-      width: 9rem;
-      height: 9rem;
+      width: 12rem;       /* profile image size on phone resolution */
+      height: 12rem;
       border-radius: 50%;
-      border: 2px solid #e4f3e9;
+      border: 2px solid rgba(222, 222, 222, 0.7);
       overflow: hidden;
       transform: translateZ(0); /* fixed the zoom in Safari */
       -webkit-transition: border-color 0.35s ease-in-out;
@@ -706,13 +706,14 @@ $sidebar-display: "sidebar-display";
       font-weight: 900;
       font-size: 1.5rem;
       letter-spacing: 0.5px;
-      color: #e4f3e9;
+      color: #f3f3e4;
     }
   }
 
   .site-subtitle {
     font-size: 95%;
-    color: var(--sidebar-muted-color);
+    //color: #f3f3e4;
+    color: var(--sidebar-muted-color); 
     line-height: 1.2rem;
     word-spacing: 1px;
     margin: 0.5rem 1.5rem 0.5rem 1.5rem;
@@ -1578,11 +1579,11 @@ $sidebar-display: "sidebar-display";
         @extend %profile-ml;
 
         > a {
-          width: 15rem;
-          height: 15rem;
+          width: 16.2rem;
+          height: 16.2rem;
 
           &.mx-auto {
-            margin-left: 0 !important;
+            margin-left: -27.5px !important;
           }
         }
       }
