--- a/_sass/colors/dark-typography.scss
+++ b/_sass/colors/dark-typography.scss
@@ -143,13 +143,21 @@
 
   #archives li:nth-child(odd) {
     background-image:
+      // linear-gradient(
+      //   to left,
+      //   rgb(26, 26, 30),
+      //   rgb(39, 39, 45),
+      //   rgb(39, 39, 45),
+      //   rgb(39, 39, 45),
+      //   rgb(26, 26, 30)
+      // );
       linear-gradient(
         to left,
-        rgb(26, 26, 30),
-        rgb(39, 39, 45),
-        rgb(39, 39, 45),
-        rgb(39, 39, 45),
-        rgb(26, 26, 30)
+        #1c1e26,
+        #1c1e26,
+        #1c1e26,
+        #1c1e26,
+        #1c1e26
       );
   }
 
